--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Festava Live - Bootstrap 5 CSS Template</title>
+        <title>CineRetro</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
