Menu déroulant dans page acceuil et tickets + mes pages film 80s

--- a/pagesFilms/retourVersLeFutur.html
+++ b/pagesFilms/retourVersLeFutur.html
@@ -15,12 +15,11 @@
 	<link href="../css/templatemo-festava-live.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../css/templateTestStyle.css" > 
-    <title>Template film</title>
-	
-	<style>
-        .card_right__review p {
-            text-align: justify;
-            text-justify: inter-word;
+    <title>Retour Vers Le Futur</title>
+
+    <style>
+        body{
+            background-color: #d84907;
         }
     </style>
 	
@@ -127,34 +126,32 @@
 	
 		<div class='cardFilm'>
 		  <div class='card_left'>
-			<img src='../images/edward-unsplash-blur.jpg' alt="Poster du Film">   <!--  Poster du film, garder la partie ../images/  -->
+			<img src='../images/retourverslefutur.jpg' alt="Poster du Film">   <!--  Poster du film, garder la partie ../images/  -->
 		  </div>
 		  <div class='card_right'>
 			<nav id="filAriane">
 				<ul>
 					<li><a href="../index.html#section_1">Home</a></li>
 					<li><a href="../index.html#section_4">Programme</a></li>
-					<li><a href="">(Année 1960-70-80-90)</a></li>  <!--  Changer Année  -->
-					<li><span>(Nom du film)      -</span></li>  <!--  Changer Nom du Film, et garder l'espace à la fin ../images/  -->
+					<li><a href="">80s</a></li>  <!--  Changer Année  -->
+					<li><span>Retour Vers Le Futur      -</span></li>  <!--  Changer Nom du Film, et garder l'espace à la fin ../images/  -->
 				</ul>
 			</nav>
 			<p>------------------------------</p>
 			<!--  Informations Film  -->
-			<h1>KILL  BILL:  VOL.  1</h1>
+			<h1>Retour Vers Le Futur</h1>
 			<div class='card_right__details'>
 			  <ul>
-				<li>2003</li>
-				<li>111 min</li>
-				<li>Action</li>
+				<li>1985</li>
+				<li>116 min</li>
+				<li>SF / Comédie / Aventure</li>
 			  </ul>
 
 			  <div class='card_right__review'>
-				<p>The lead character, called 'The Bride,' was a member of the Deadly Viper Assassination Squad, led by her lover 'Bill.' Upon realizing she was pregnant with Bill's child, 'The Bride' decided to escape her life as a killer.<br> She fled to Texas, met a young man, who, on the day of their wedding rehearsal was gunned down by....</p>
-				<p>The lead character, called 'The Bride,' was a member <br> of the Deadly Viper Assassination Squad, led by her <br> lover 'Bill.' Upon realizing she was pregnant with Bill's<br> child, 'The Bride' decided to escape her life as a killer.<br> She fled to Texas, met a young man, who, on the day<br> of their wedding rehearsal was gunned down by....</p>
-				<a href='http://www.imdb.com/title/tt0266697/plotsummary?ref_=tt_stry_pl' target='_blank'>Read more</a>
+				<p>En 1985, Marty, un adolescent comme les autres, mène une existence qu'il juge morne et ennuyeuse. Heureusement, il est épris de la jolie Jennifer et entretient une profonde amitié avec Doc, un savant fou qui prétend avoir inventé une machine à explorer le temps. Un jour, Doc invite Marty à l'essayer. Mais ils sont surpris par des terroristes. Doc est abattu tandis que Marty met l'engin en marche et se retrouve en 1955.</p>
 			  </div>
 			  <div class='card_right__button'>
-				<a href='https://www.youtube.com/watch?v=ot6C1ZKyiME' target='_blank'>WATCH TRAILER</a>   <!--  Bande Annonce  -->
+				<a href='https://www.youtube.com/watch?v=saCXL-Xfbwk' target='_blank'>WATCH TRAILER</a>   <!--  Bande Annonce  -->
 			  </div>
 			</div>
 		  </div>
