--- a/pagesFilms/cinemaParadiso.html
+++ b/pagesFilms/cinemaParadiso.html
@@ -15,12 +15,11 @@
 	<link href="../css/templatemo-festava-live.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../css/templateTestStyle.css" > 
-    <title>Template film</title>
+    <title>Cinema Paradiso</title>
 	
-	<style>
-        .card_right__review p {
-            text-align: justify;
-            text-justify: inter-word;
+    <style>
+        body{
+            background-color: #d84907;
         }
     </style>
 	
@@ -127,34 +126,32 @@
 	
 		<div class='cardFilm'>
 		  <div class='card_left'>
-			<img src='../images/edward-unsplash-blur.jpg' alt="Poster du Film">   <!--  Poster du film, garder la partie ../images/  -->
+			<img src='../images/cinemaparadiso.jpg' alt="Poster du Film">   <!--  Poster du film, garder la partie ../images/  -->
 		  </div>
 		  <div class='card_right'>
 			<nav id="filAriane">
 				<ul>
 					<li><a href="../index.html#section_1">Home</a></li>
 					<li><a href="../index.html#section_4">Programme</a></li>
-					<li><a href="">(Année 1960-70-80-90)</a></li>  <!--  Changer Année  -->
-					<li><span>(Nom du film)      -</span></li>  <!--  Changer Nom du Film, et garder l'espace à la fin ../images/  -->
+					<li><a href="">80s</a></li>  <!--  Changer Année  -->
+					<li><span>Cinema Paradiso      -</span></li>  <!--  Changer Nom du Film, et garder l'espace à la fin ../images/  -->
 				</ul>
 			</nav>
 			<p>------------------------------</p>
 			<!--  Informations Film  -->
-			<h1>KILL  BILL:  VOL.  1</h1>
+			<h1>Cinema Paradiso</h1>
 			<div class='card_right__details'>
 			  <ul>
-				<li>2003</li>
-				<li>111 min</li>
-				<li>Action</li>
+				<li>1988</li>
+				<li>124 min</li>
+				<li>Drama / Romance</li>
 			  </ul>
 
 			  <div class='card_right__review'>
-				<p>The lead character, called 'The Bride,' was a member of the Deadly Viper Assassination Squad, led by her lover 'Bill.' Upon realizing she was pregnant with Bill's child, 'The Bride' decided to escape her life as a killer.<br> She fled to Texas, met a young man, who, on the day of their wedding rehearsal was gunned down by....</p>
-				<p>The lead character, called 'The Bride,' was a member <br> of the Deadly Viper Assassination Squad, led by her <br> lover 'Bill.' Upon realizing she was pregnant with Bill's<br> child, 'The Bride' decided to escape her life as a killer.<br> She fled to Texas, met a young man, who, on the day<br> of their wedding rehearsal was gunned down by....</p>
-				<a href='http://www.imdb.com/title/tt0266697/plotsummary?ref_=tt_stry_pl' target='_blank'>Read more</a>
+				<p>Alfredo vient de mourir. Pour Salvatore, cinéaste en vogue, c’est tout un pan de son passé qui s’écroule. On l’appelait Toto a l’époque. Il partageait son temps libre entre l’office où il était enfant de chœur et la salle de cinéma paroissiale, en particulier la cabine de projection où régnait Alfredo...</p>
 			  </div>
 			  <div class='card_right__button'>
-				<a href='https://www.youtube.com/watch?v=ot6C1ZKyiME' target='_blank'>WATCH TRAILER</a>   <!--  Bande Annonce  -->
+				<a href='https://www.youtube.com/watch?v=JMyVSD6OvO8' target='_blank'>WATCH TRAILER</a>   <!--  Bande Annonce  -->
 			  </div>
 			</div>
 		  </div>
