--- a/pagesFilms/lesGrifesDeLaNuit.html
+++ b/pagesFilms/lesGrifesDeLaNuit.html
@@ -23,7 +23,6 @@
         }
     </style>
 	
-	
 </head>
 <body>
 	<main>
@@ -151,7 +150,7 @@
 				<p>Nancy Thompson est une jeune adolescente qui fait régulièrement des cauchemars sur un homme au visage brûlé, avec cinq lames tranchantes à la place des doigts. Or ses amis Tina, Rod et Glen font les mêmes cauchemars. C'est ainsi que le groupe fait la connaissance de l'ignoble Freddy Krueger, qui se sert des cauchemars pour assassiner ses victimes durant leur sommeil. Nancy comprend qu'elle n'a plus qu'une seule solution si elle veut rester en vie : rester éveillée.</p>
 			  </div>
 			  <div class='card_right__button'>
-				<a href='https://www.youtube.com/watch?v=OuqHdlQ7DBM' target='_blank'>WATCH TRAILER</a>   <!--  Bande Annonce  -->
+				<a href='https://www.youtube.com/watch?v=OuqHdlQ7DBM&t=53s' target='_blank'>WATCH TRAILER</a>   <!--  Bande Annonce  -->
 			  </div>
 			</div>
 		  </div>
