Ajout lien pdf programme

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ https://templatemo.com/tm-583-festava-live
 
                         <div class="col-lg-6 col-12 mb-4 mb-lg-0 d-flex align-items-center">
                             <div class="services-info">
-                                <h2 class="text-white mb-4">About Festava 2024</h2>
+                                <h2 class="text-white mb-4">About CineRetro 2024</h2>
 
                                 <p class="text-white">Reel Back in Time: Celebrating Decades of Cinematic Magic!</p>
 
@@ -362,7 +362,7 @@ https://templatemo.com/tm-583-festava-live
                 <div class="container">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <h2 class="text-white mb-4">Event Schedule</h2>
+                            <h2 class="text-white mb-4"><a href="programmefilms.pdf">Event Schedule</a></h2>
             
                             <div class="table-responsive">
                                 <table class="schedule-table table table-dark">
