correction fautes page les Griffes de la Nuit

--- a/pagesFilms/lesGrifesDeLaNuit.html
+++ b/pagesFilms/lesGrifesDeLaNuit.html
@@ -15,7 +15,7 @@
 	<link href="../css/templatemo-festava-live.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../css/templateTestStyle.css" > 
-    <title>Les Grifes De La Nuit</title>
+    <title>Les Griffes De La Nuit</title>
 	
     <style>
         body{
@@ -133,12 +133,12 @@
 					<li><a href="../index.html#section_1">Home</a></li>
 					<li><a href="../index.html#section_4">Programme</a></li>
 					<li><a href="">80s</a></li>  <!--  Changer Année  -->
-					<li><span>Les Grifes De La Nuit      -</span></li>  <!--  Changer Nom du Film, et garder l'espace à la fin ../images/  -->
+					<li><span>Les Griffes De La Nuit      -</span></li>  <!--  Changer Nom du Film, et garder l'espace à la fin ../images/  -->
 				</ul>
 			</nav>
 			<p>------------------------------</p>
 			<!--  Informations Film  -->
-			<h1>Les Grifes De La Nuit</h1>
+			<h1>Les Griffes De La Nuit</h1>
 			<div class='card_right__details'>
 			  <ul>
 				<li>1984</li>
